<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpScreenoneVM" type="com.syafiqaqilahsapplication.app.modules.signupscreenone.data.viewmodel.SignUpScreenoneVM"/>
    </data>
    <FrameLayout android:id="@+id/frameSignUpScreenOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleblack_900">
        <LinearLayout android:id="@+id/linearColumnregisterw"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_83pxv"
            android:paddingEnd="@dimen/_33pxh"
            android:paddingStart="@dimen/_33pxh"
            android:paddingTop="@dimen/_83pxv" style="@style/groupStylegray_400_89cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtRegisterwith"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signUpScreenoneVM.signUpScreenoneModel.txtRegisterwith}"
                style="@style/txtPoppinsbold20_1" tools:text="@string/msg_register_with_us"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtYour"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{signUpScreenoneVM.signUpScreenoneModel.txtYour}"
                style="@style/txtRobotoregular15_2" tools:text="@string/msg_your_information"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_20"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_full"
                android:id="@+id/etFullName" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_49pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_20pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@={signUpScreenoneVM.signUpScreenoneModel.etFullNameValue}"
                android:textColorHint="@color/black_900_70"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_20"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_email"
                android:id="@+id/etEmail" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_43pxv"
                android:layout_marginTop="@dimen/_43pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_20pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@={signUpScreenoneVM.signUpScreenoneModel.etEmailValue}"
                android:textColorHint="@color/black_900_70"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearColumnskinbiops"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRow"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearRowskinbiopsytw"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_103pxv"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageSkinbiopsytwo"
                        android:layout_gravity="bottom"
                        android:layout_height="@dimen/_51pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="@dimen/_52pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_skin_biopsy_1}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_skin_biopsy_1"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnprice"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_width="wrap_content" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPrice"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{signUpScreenoneVM.signUpScreenoneModel.txtPrice}"
                            style="@style/txtPoppinsbold25" tools:text="@string/lbl_sosa"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtSolarsafe"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{signUpScreenoneVM.signUpScreenoneModel.txtSolarsafe}"
                            style="@style/txtPoppinsregular15" tools:text="@string/lbl_solar_safe"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView android:id="@+id/imageImage"
                    android:layout_height="@dimen/_177pxh"
                    android:layout_marginStart="@dimen/_66pxh"
                    android:layout_width="@dimen/_144pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_group_2}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_group_2"/>
            </LinearLayout>
            <View android:id="@+id/viewView"
                android:layout_height="@dimen/_304pxv" android:layout_width="@dimen/_349pxh"/>
            <FrameLayout android:id="@+id/frameStack"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_331pxv" android:layout_width="@dimen/_349pxh">
                <FrameLayout android:id="@+id/frameStackskinbiopsy"
                    android:layout_gravity="bottom|center"
                    android:layout_height="@dimen/_282pxv" android:layout_width="@dimen/_349pxh">
                    <ImageView android:id="@+id/imageSkinbiopsyone"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_282pxh"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_skin_biopsy_1_282x349}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_skin_biopsy_1_282x349"/>
                    <LinearLayout android:id="@+id/linearColumnpassword"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_11pxv"
                        android:layout_marginEnd="@dimen/_33pxh"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <EditText
                            android:background="@drawable/rectangle_bg_white_a700_radius_20"
                            android:ellipsize="end"
                            android:hint="@string/msg_confirm_your_password"
                            android:id="@+id/etPassword"
                            android:inputType="text"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:paddingBottom="@dimen/_20pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_20pxv"
                            android:singleLine="true"
                            android:text="@={signUpScreenoneVM.signUpScreenoneModel.etPasswordValue}"
                            android:textColorHint="@color/black_900_70"
                            style="@style/etSolidRounded" tools:ignore="Autofill"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnSignUp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_64pxv"
                            android:layout_width="match_parent"
                            android:paddingBottom="@dimen/_14pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_14pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_sign_up2"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up2"/>
                        <TextView android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:id="@+id/txtConfirmation"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16pxv"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{signUpScreenoneVM.signUpScreenoneModel.txtConfirmation}"
                            style="@style/txtRobotobold18" tools:text="@string/msg_already_have_an"/>
                    </LinearLayout>
                </FrameLayout>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_radius_20"
                    android:ellipsize="end"
                    android:hint="@string/msg_enter_your_password"
                    android:id="@+id/etPassword1"
                    android:inputType="text"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_20pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={signUpScreenoneVM.signUpScreenoneModel.etPassword1Value}"
                    android:textColorHint="@color/black_900_70"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
